--- a/Learning_Syntax/cli/pyproject.toml
+++ b/Learning_Syntax/cli/pyproject.toml
@@ -10,6 +10,10 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
   "click>=8.1",
+  "pydantic>=2.7",
+  "pyyaml>=6.0".
+  "tomli>=2.0; python_version < '3.11'",
+
 ]
 
 # This creates the `eve` command that calls eve/cli.py:cli()
